# ipc-socket-otsm-service

./: .gitmodules  CMakeLists.txt  README.md  octopus.c  octopus_carinfor.c  octopus_carinfor.h  octopus_ipc.c  octopus_ipc.h  octopus_ipc_socket.c  octopus_ipc_socket.h  octopus_msgqueue.h  octopus_platform.h  octopus_rpc.service  octopus_system.h  octopus_task_manager.h  octopus_tickcounter.c  octopus_uart_hal.c  octopus_uart_ptl.c  octopus_uart_ptl.h  toolchain.cmake
src/: CMakeLists.txt  main.c  main.cpp  octopus_Logger.cpp  octopus_client.cpp  octopus_ipc_client.cpp  octopus_ipc_server.cpp  octopus_ipc_socket.cpp  octopus_ipc_socket.hpp  octopus_server.cpp
src/APP/: CMakeLists.txt  octopus_ipc_app.cpp  octopus_ipc_app.hpp  octopus_ipc_app_client.cpp  octopus_ipc_app_client.hpp  octopus_message_bus.cpp  octopus_message_bus.hpp  octopus_message_bus_c_api.c  octopus_message_bus_c_api.h
src/HAL/: CMakeLists.txt  octopus_serialport.cpp  octopus_serialport.hpp  octopus_serialport_c.cpp  octopus_serialport_c.h  octopus_usb.cpp  octopus_usb.hpp
src/IPC/: CMakeLists.txt  octopus.service  octopus_ipc_client.cpp  octopus_ipc_cmd.hpp  octopus_ipc_ptl.cpp  octopus_ipc_ptl.hpp  octopus_ipc_server.cpp  octopus_ipc_server.service  octopus_ipc_service.service  octopus_ipc_socket.cpp  octopus_ipc_socket.hpp  octopus_ipc_threadpool.cpp  octopus_ipc_threadpool.hpp  octopus_logger.cpp  octopus_logger.hpp
